<resources>
    <string name="app_name">ELL Clinic</string>
    <!-- Strings related to btnLogin -->

    <string name="system">ELL DENTAL RECORD SYSTEM</string>
    <string name="systemName">Dental Management\nSystem</string>

    <!-- Login Strings -->
    <string name="logo_content_desc">ELL Logo</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="action_sign_in">LOGIN</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome!</string>
    <string name="invalid_username">Not a valid email</string>
    <string name="invalid_password">Password must be 6 characters and above</string>
    <string name="login_failed">"Login failed"</string>
    <string name="prompt_forgot_password">Forgot password?</string>
    <string name="nav_header_title">User Display Name</string>
    <string name="nav_header_subtitle">user_email@email.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <!-- Nav Menu -->
    <string name="menu_logout">Logout</string>
    <string name="menu_help">Help</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="title_activity_add_patient">AddPatientActivity</string>

    <!-- Strings used for fragments for navigation -->
    <string name="basic_info_fragment_label">Basic Info Fragment</string>
    <string name="next">Next</string>

    <string name="hello_first_fragment">Hello first fragment</string>

    <!--    Frame Labels    -->
    <string name="title_activity_view_service">ViewServiceActivity</string>
    <string name="title_activity_login_or_register">LogInOrRegisterActivity</string>

    <!-- Constants -->
    <string name="TODO">TODO</string>
    <string name="PATIENT">Patient</string>
    <string name="EMPLOYEE">Employee</string>
    <string name="ADMIN">Admin</string>
    <string name="EMPLOYEE_UID_KEY">EMPLOYEE_KEY</string>
    <string name="USER_UID_KEY">USER_KEY</string>
    <string name="IS_EDIT">IS_EDIT</string>
    <string name="IS_ADMIN">-IS_ADMIN</string>
    <string name="BUNDLE_KEY">Bundle</string>
    <string name="APPOINTMENT_KEY">APPOINTMENT_KEY</string>


    <!-- TODO: Remove or change this placeholder text -->

    <!-- Home -->
    <string name="error_network">Connect to a network.</string>
    <string name="error_network_home">Looks like you are offline!</string>
    <string name="last_update">Last Updated </string>

    <!-- Patient Item -->
    <string name="ellipces">…</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- Invalid messages -->
    <string name="invalid_input">Invalid</string>
    <string name="invalid_empty_input">Please fill up the field.</string>
    <string name="invalid_contains_number">This field cannot contain number/s.</string>
    <string name="invalid_contains_letter">This field cannot contain letter/s.</string>
    <string name="invalid_cel_limit_number">This field cannot exceed or fall short to 10 numbers.</string>
    <string name="invalid_contact_number">Please input a valid contact number.</string>
    <string name="invalid_tel_limit_number">This field cannot exceed 10 numbers or fall short to 7 numbers.</string>
    <string name="invalid_contains_special_character">This field cannot contain special character/s</string>
    <string name="invalid_contains_more_than_one_character">This field cannot contain more than one character</string>
    <string name="invalid_contains_two_or_more_dots">This field cannot contain two or more dots.</string>
    <string name="invalid_too_old">This field can only contain numbers from 1 -150</string>
    <string name="invalid_fully_paid">Amount exceeded the balance amount</string>
    <string name="an_error_occurred">An error occurred</string>
    <string name="weak_password">The given password is invalid. Password should be at least 6 characters.</string>
    <string name="email_taken">The email address is already in use by another account.</string>
    <string name="invalid_email">Please input a valid email.</string>
    <string name="password_not_match">Password does not match.</string>
    <string name="error_creating_patient">An error occurred in creating patient.</string>
    <string name="error_creating_procedure">An error occurred in creating procedure.</string>
    <string name="error_creating_progress_note">An error occurred in creating progress note.</string>
    <string name="unsuccessfull_update_data">Unsuccessful in updating the %1$s information.</string>
    <string name="unseuccessful_update_email">Unsuccessful in updating email.</string>
    <string name="unseuccessful_update_password">Unsuccessful in changing password.</string>
    <string name="unsuccessful_deleting_user">Unsuccessful in deleting account.</string>

    <string name="title_activity_patient">PatientActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="patient_info_label">Patient Info</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>
    <string name="collapsing_toolbar_background">Collapsing Toolbar Background</string>

    <!-- Patient Info -->
    <string name="patient_basic_info">Basic Info</string>
    <string name="Firstname">Firstname</string>
    <string name="Lastname">Lastname</string>
    <string name="MiddleInitial">Middle Initial</string>
    <string name="Age">Age</string>
    <string name="Address">Address</string>
    <string name="ContactNumber">Contact Number</string>
    <string name="Occupation">Occupation</string>
    <string name="CivilStatus">Civil Status</string>

    <string name="add_dental_operation">New Procedure</string>
    <string name="fully_paid">Fully Paid</string>

    <string name="delete_title">Delete %1$s</string>
    <string name="delete_message">Are you sure you want to remove </string>
    <!-- Strings used for fragments for navigation -->
    <string name="title_activity_register">RegisterActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="title_activity_add_service">AddServiceActivity</string>


    <!--    Button Titles   -->
    <string name="btn_add_patient">ADD PATIENT</string>
    <string name="btn_patient_list">PATIENT LIST</string>
    <string name="btn_add_employee">ADD EMPLOYEE</string>
    <string name="btn_employee_list">EMPLOYEE LIST</string>
    <string name="btn_create_appointment">CREATE APPOINTMENT</string>
    <string name="btn_appointment_lsit">APPOINTMENT LIST</string>
    <string name="btn_view_service">View</string>
    <string name="btn_remove_service">Delete</string>

    <!--    Greetings   -->
    <string name="greet_admin">Welcome,\n%1$s!</string>
    <string name="title_activity_view_employee">ViewEmployeeActivity</string>
    <string name="employee_tab">Employee</string>
    <string name="account_activity_tab">Account Activity</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_accounts">AccountsActivity</string>

    <!--    Toolbar Title   -->
    <string name="toolbar_title_form">New %1$s</string>

    <!--    List texts  -->
    <string name="empty_list">%1$s will show here…</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_dental_chart">DentalChartActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

</resources>