<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_user_home"
            android:icon="@mipmap/menu_home"
            android:title="Home" />

        <item
            android:id="@+id/nav_user_service"
            android:icon="@mipmap/icon_services3"
            android:title="Services" />
    </group>

    <group android:id="@+id/nav_user_bottom">
        <item
            android:id="@+id/nav_settings"
            android:icon="@mipmap/menu_settings"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_help"
            android:icon="@mipmap/menu_help"
            android:title="@string/menu_help" />
        <item
            android:id="@+id/nav_about"
            android:icon="@mipmap/menu_about"
            android:title="@string/menu_about" />
    </group>

    <group>
        <item
            android:id="@+id/nav_logout"
            android:icon="@mipmap/menu_logout"
            android:title="@string/menu_logout" />

        <item
            android:id="@+id/nav_user_create_account"
            android:title="Create Account" />
    </group>
</menu>