<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_user_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="Home" />

        <item
            android:id="@+id/nav_user_service"
            android:icon="@drawable/ic_baseline_medical_services_24"
            android:title="Services" />
        <item
            android:id="@+id/nav_user_dental_history"
            android:icon="@drawable/ic_baseline_history_24"
            android:title="Dental History"
            android:visible="false" />
        <item
            android:id="@+id/nav_user_appointments"
            android:icon="@drawable/ic_baseline_calendar_today_24"
            android:title="Appointments"
            android:visible="false" />

    </group>

    <group android:id="@+id/nav_user_bottom">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_baseline_help_outline_24"
            android:title="@string/menu_help" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_baseline_info_24"
            android:title="@string/menu_about" />
    </group>

    <group>
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_baseline_power_settings_new_24"
            android:title="@string/menu_logout"
            android:visible="false" />

        <item
            android:id="@+id/nav_register"
            android:icon="@drawable/ic_baseline_account_box_24"
            android:title="Register" />
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_baseline_login_24"
            android:title="Login" />

    </group>
</menu>